# patras

./: .gitignore  Cargo.toml  README.md  justfile  opts.toml  tree.txt
backend/: Cargo.toml
backend/crates/core/: build.rs
backend/crates/core/src/: lib.rs
backend/crates/shuttle/: Cargo.toml
client/: index.html  package-lock.json  package.json  vite.config.ts
client/public/: about.txt
client/src/: App.tsx  Context.tsx  IndexRouter.tsx  main.scss  main.tsx
client/src/components/: Header.tsx  header.module.scss
client/src/routes/: Index.tsx  LogIn.tsx  LogOut.tsx  PageNotFound.tsx  SignUp.tsx  index.module.scss  log-in.module.scss  log-out.module.scss  page-not-found.module.scss  sign-up.module.scss
client/src/scss/: main.scss
crates/api/: Cargo.toml
crates/api/src/: lib.rs  persist.rs
crates/api/src/persist/: auth.rs  error.rs  models.rs  sql.rs  store.rs
crates/core/: Cargo.toml  build.rs
crates/core/migrations/: 20240713181718_users.sql  20240713224437_users.down.sql  20240713224437_users.up.sql
crates/core/queries/: insert_user.sql  select_id.sql  select_username.sql
crates/core/src/: lib.rs  models.rs  persist.rs  shutdown.rs  state.rs
crates/core/src/persist/: auth.rs  error.rs  models.rs  sql.rs  store.rs
crates/core/src/state/: persist.rs
crates/core/src/state/persist/: auth.rs  error.rs
crates/dev/: Cargo.toml  build.rs
crates/dev/src/: main.rs  shutdown.rs  signal.rs
crates/local/: Cargo.toml
crates/local/src/: main.rs
crates/persist/: .sqllsrc.json  Cargo.toml  build.rs
crates/persist/src/: lib.rs  sql.rs
crates/prod/: Cargo.toml
crates/prod/src/: lib.rs  main.rs
crates/shuttle/: Cargo.toml
crates/shuttle/src/: main.rs
crates/topoma/: Cargo.toml
crates/topoma/src/: lib.rs  parse.rs  sql.rs
frontend/: index.html  package.json
frontend/src/: App.tsx  IndexRouter.tsx  main.tsx
frontend/src/components/: Header.tsx
frontend/src/scss/: main.scss
src/: lib.rs
