[workspace]
members = ["crates/*"]

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "deny"
future_incompatible = "deny"

[workspace.lints.rustdoc]
all = "deny"

[workspace.lints.clippy]
all = "deny"
pedantic = "deny"
nursery = "deny"

# enum_glob_use = "allow"
# equatable_if_let = "allow"
# wildcard_imports = "allow"

[package]
name = "backend"
version = "0.0.0"
edition = "2021"

[dependencies]
