[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
argon2 = "0.5"
derivative = "2.2"
libreauth = "0.16"
# trait-variant = "0.1"
# persist
dotenvy = "0.15"
thiserror = "1.0"
# DB
deadpool-postgres = "0.14"
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
# topoma = { path = "../topoma/" }
uuid = "1.9"

[lints]
workspace = true
