[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
# etc
derivative = "2.2"
tracing = "0.1"
# pass
libreauth = "0.16"
# persist
thiserror = "1.0"
# DB
deadpool-postgres = "0.14"
tokio-postgres = { version = "0.7", features = ["with-uuid-1"] }
topoma = { path = "../topoma/" }
uuid = "1.10"


[lints]
workspace = true
