[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
# # etc
# async-trait = "0.1"
# derivative = "2.2"
# rmp-serde = "1.3"
# time = "0.3"
# tracing = "0.1"
# # auth
# axum-login = "0.15"
# libreauth = "0.16"
# # server
# axum = { version = "0.7", features = ["macros"] }
# serde = { version = "1.0", features = ["derive"] }
# tokio = { version = "1.38", features = ["full"] }
# tower = { version = "0.4", features = ["full"] }
# tower-http = { version = "0.5", features = ["full"] }
# tower-sessions = "0.12"
# # persist
# thiserror = "1.0"
# # DB
# deadpool-postgres = "0.14"
# tokio-postgres = { version = "0.7", features = [
# 	"with-uuid-1",
# 	"with-time-0_3",
# ] }
# topoma = { path = "../topoma/" }
# uuid = "1.10"


[lints]
workspace = true
