[package]
name = "core-server"
version = "0.0.0"
edition = "2021"

[dependencies]
# etc
anyhow = "1.0"
api = { path = "../api/" }
# Axum Server Deps ------------------------------------------------------------
# server
axum = { version = "0.7", features = ["macros"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.38", features = ["full"] }
# tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["full"] }
# logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
