[package]
name = "core-server"
version = "0.0.0"
edition = "2021"

[dependencies]
# # etc
# anyhow = "1.0"
# api = { path = "../api/" }
# async-trait = "0.1"
# derivative = "2.2"
# rmp-serde = "1.3"
# thiserror = "1.0"
# time = "0.3"
# # auth
# axum-login = "0.15"
# libreauth = "0.16"
# # server
# axum = { version = "0.7", features = ["macros"] }
# serde = { version = "1.0", features = ["derive"] }
# tokio = { version = "1.38", features = ["full"] }
# tower = { version = "0.4", features = ["full"] }
# tower-http = { version = "0.5", features = ["full"] }
# tower-sessions = "0.12"
# # persist
# deadpool-postgres = "0.14"
# tokio-postgres = { version = "0.7", features = [
# 	"with-uuid-1",
# 	"with-time-0_3",
# ] }
# topoma = { path = "../topoma/" }
# uuid = "1.10"
# # logging
# tracing = "0.1"
# tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lints]
workspace = true
